// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> renders component 1`] = `
Array [
  .c0 {
  width: 100%;
  border: 1px solid;
  padding: 12px 16px;
  outline: 0;
  border-radius: 8px;
}

<input
    class="c0"
    name="name"
    placeholder="Nome"
    value="Mario"
  />,
]
`;

exports[`<TextField /> when field is invalid display the respect error message 1`] = `
.c0 {
  width: 100%;
  border: 1px solid;
  padding: 12px 16px;
  outline: 0;
  border-radius: 8px;
  border-color: #dc3545;
}

.c0 + span {
  color: #dc3545;
  font-size: 11px;
}

<input
  class="c0"
  name="email"
  placeholder="Email"
  value="devsoutinhogmail.com"
/>
`;
